# Annice-Brain-App

./: README.md  gradle.properties  import-summary.txt  settings.gradle
OpenCV/: build.gradle
OpenCV/src/main/: AndroidManifest.xml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/sync/: mymenu.gram  mymenu.gram.md5
app/src/main/java/com/example/littyling/annicebrain/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: index.html
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
